--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,1 +1,5 @@
-Welcome to my site!
+<!-- placeholder button to take you to albums until we establish user auth -->
+
+<form method="POST" action="/albums">
+<input type="submit" value="Albums">
+</form>
