modified css and working on album show_all and album show method

--- a/app/views/albums/index.erb
+++ b/app/views/albums/index.erb
@@ -1,6 +1,6 @@
-<!-- show all albums -->
+<h1> Albums <h1>
 
-show all albums
+<!-- refactor into show_albums -->
 
 <!-- button goes to album -->
 <form method="POST" action="/albums/id">
