--- a/app/views/albums/show.erb
+++ b/app/views/albums/show.erb
@@ -1,6 +1,5 @@
 <!-- show a single album with it's photos -->
 
-single album view
+<!-- single album view -->
 
-
-<%=@album%>
+<%= erb :_show_album, object: @album %>
