Add delete button to photo display

--- a/app/views/photo/show.erb
+++ b/app/views/photo/show.erb
@@ -1,1 +1,6 @@
 <img alt="Embedded Image" src="data:image/png;base64,<%=@photo%>"/>
+
+<form action="/photos/<%=@photo_object.id%>" method="POST">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete">
+</form>
