--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,35 @@
+body{
+    margin: 0;
+}
+
+nav{
+    background-color: rgba(230,230,230, .8);
+    height: 70px;
+}
+
+nav ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: right;
+    padding: 20px 0 20px 0;
+}
+
+a:link, a:visited {
+    display:block;
+    width: 120px;
+    padding: 4px;
+    text-decoration: none;
+}
+
+a:hover, a:active{
+    background-color: rgb(240,240,240);
+}
+
 
 .container {
     margin: 80px auto;
@@ -9,6 +41,15 @@
 img{
     width:30%;
     margin: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(120,120,120);
+}
+
+a:visited{
+    text-decoration: none;
 }
 
 /*nav{
