adding nav bar for show my albums and signin/signout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,11 +19,13 @@
   </head>
   <body>
     <nav>
-      <!-- add partial for delete album -->
+      <!-- add partial for delete album if they're in an album/photo -->
       <ul>
-        <li><a href="/logout">Sign Out</a></li>
+        <li><a href="/">Sign in</a></li>
+        <li><a href="/logout">Sign out</a></li>
         <li><a href="/photos/upload">Upload Photo</a></li>
         <li><a href="/albums/new">Create Album</a></li>
+        <li><a href="/albums">My Albums</a></li>
     </ul>
   </nav>
   <div id="content">
