adding home button

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,6 +20,7 @@
   <body>
     <nav>
       <!-- add partial for delete album if they're in an album/photo -->
+      <p id ="home-button">FLICKGURBOX</p>
       <ul>
         <li><a href="/">Sign in</a></li>
         <li><a href="/logout">Sign out</a></li>
