Added user validations and flash messages for auth controller

--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -1,3 +1,5 @@
+<div class="entry-error"><%= flash[:error] if flash[:error] %></div>
+
 <form action="/signup" method="POST">
   <label>Username:</label>
   <input type="text" name="user[name]">
