--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -30,6 +30,7 @@
   </nav>
   <div id="content">
     <div class ="container">
+      <div class="entry-error"><%= flash[:error] if flash[:error] %></div>
       <%= yield %>
     </div>
   </body>
