--- a/app/views/albums/show.erb
+++ b/app/views/albums/show.erb
@@ -1,13 +1,14 @@
 <!-- show a single album with it's photos -->
 
 <!-- single album view -->
-<h1><%=@album.name%></h1>
+<!-- <h1 class ="title"><%=@album.name%></h1> -->
 
 <!-- button for editing -->
 
 <form action="<%=album_url(@album)%>/edit" method="GET">
   <input type="submit" name="GET" value="Edit">
 </form>
+
 
 <form action="<%=album_url(@album)%>/delete" method="POST">
   <input type="hidden" name="_method" value="DELETE">
