adding dynamic sign up button to nav bar

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,6 +25,7 @@
         <%if current_user%>
         <li><a href="/logout">Sign out</a></li>
         <%else%>
+        <li><a href="/signup">Sign Up</a></li>
         <li><a href="/login">Sign in</a></li>
         <%end%>
         <li><a href="/photos/upload">Upload Photo</a></li>
