--- a/app/views/albums/show.erb
+++ b/app/views/albums/show.erb
@@ -1,7 +1,7 @@
 <!-- show a single album with it's photos -->
 
 <!-- single album view -->
-<!-- <h1 class ="title"><%=@album.name%></h1> -->
+<h1 class ="title"><%=@album.name%></h1>
 
 <!-- button for editing -->
 
