Create album_ownership_check method and added it to albums/id and albums/id/edit

--- a/app/views/albums/new.erb
+++ b/app/views/albums/new.erb
@@ -3,7 +3,7 @@
 	<input type="text" name="album[name]"><br>
 	<label>Body</label><br>
 	<textarea class ="body-area" name="album[description]"></textarea><br>
-	<input type="hidden" name="album[user_id]" value = 1 >
+	<input type="hidden" name="album[user_id]" value = "<%=current_user.id%>" >
 	<input type="submit"><%=flash[:notice]%>
 </form>
 
