--- a/app/views/albums/new.erb
+++ b/app/views/albums/new.erb
@@ -2,7 +2,7 @@
 	<label>Title</label><br>
 	<input type="text" name="album[name]"><br>
 	<label>Body</label><br>
-	<textarea class ="body-area" name="album[description]"></textarea><br>
+	<textarea rows = "10" cols= "30" class ="body-area" name="album[description]"></textarea><br>
 	<input type="hidden" name="album[user_id]" value = 1 >
 	<input type="submit"><%=flash[:notice]%>
 </form>
