--- a/app/views/albums/edit.erb
+++ b/app/views/albums/edit.erb
@@ -5,6 +5,6 @@
   <label>Body</label><br>
   <textarea class ="body-area" name="album[description]" value="<%=@album.description%>"></textarea><br>
   <!-- refactor and fix hardcoded value -->
-  <input type="hidden" name="album[user_id]" value = 1 >
+  <input type="hidden" name="album[user_id]" value = "<%=current_user.id%>" >
   <input type="submit"><%=flash[:notice]%>
 </form>
