Replace photo upload link with erb call to photo upload partial

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,7 +28,7 @@
         <li><a href="/signup">Sign Up</a></li>
         <li><a href="/login">Sign in</a></li>
         <%end%>
-        <li><a href="/photos/upload">Upload Photo</a></li>
+        <%= erb :'_uploadpopup' %>
         <li><a href="/albums/new">Create Album</a></li>
         <li><a href="/albums">My Albums</a></li>
       </ul>
