working on adding nav bar CSS

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
   <body>
     <nav>
       <!-- add partial for delete album if they're in an album/photo -->
-      <p id ="home-button">FLICKGURBOX</p>
+      <p id ="home-button">FLIKGURGRAM</p>
       <ul>
         <%if current_user%>
         <li><a href="/logout">Sign out</a></li>
