--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,20 +19,18 @@
   </head>
   <body>
     <nav>
-      <!-- add partial for delete album if they're in an album/photo -->
-      <p id ="home-button">FLIKGURGRAM</p>
       <ul>
+        <!-- refactor this into partials -->
         <%if current_user%>
-        <li><a href="/logout">Sign out</a></li>
-        <li><a href="/albums/new">Create Album</a></li>
-        <li><a href="/albums">My Albums</a></li>
-           <%= erb :'_uploadpopup' %>
+          <li><a href="/logout">Sign out</a></li>
+          <li><a href="/albums/new">Create Album</a></li>
+          <li><a href="/albums">My Albums</a></li>
+             <%= erb :'_uploadpopup' %>
         <%else%>
-        <li><a href="/signup">Sign Up</a></li>
-        <li><a href="/login">Sign in</a></li>
+          <li><a href="/signup">Sign Up</a></li>
+          <li><a href="/login">Sign in</a></li>
         <%end%>
-     
-        
+        <li id ="home-button">FLIKGURGRAM</li>
       </ul>
     </nav>
     <div class ="container">
