branching to work on album layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -35,9 +35,9 @@
         <li id ="home-button">FLIKGURGRAM</li>
       </ul>
     </nav>
-    <div class ="container">
+    <!-- <div class ="container"> -->
       <div class="entry-error"><%= flash[:error] if flash[:error] %></div>
       <%= yield %>
-    </div>
+    <!-- </div> -->
   </body>
 </html>
