--- a/app/views/albums/index.erb
+++ b/app/views/albums/index.erb
@@ -1,7 +1,6 @@
-<h1> Albums </h1>
-
+<!-- <h1> Albums </h1> -->
 <%@albums.each do |album| %>
 	<!-- hacky and wrong. Refactor -->
 
-	<div class="album-cover"><a href="<%=album_url(album)%>"> <img src="data:image/png;base64, <%=encode(Photo.find_by(album_id: album.id)) if !Photo.find_by(album_id: album.id).nil?%>"></a> </div>
+	<div class="album box"><div class = "innerContent"><a href="<%=album_url(album)%>"> <img src="data:image/png;base64, <%=encode(Photo.find_by(album_id: album.id)) if !Photo.find_by(album_id: album.id).nil?%>"></a> </div>
 <%end%>
