--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,6 +1,7 @@
-body{
+html, body{
     margin: 0;
     background-color: rgb(232,232,232);
+    height: 100%;
 }
 
 nav{
@@ -50,33 +51,30 @@ nav ul li:nth-child(4) {
     border-left: 1px solid rgba(255,255,255, .1);
 }
 
-a:link, a:visited {
-    display:block;
-    text-decoration: none;
-    color: inherit;
-}
-/*
-a:hover, a:active{
-    background-color: #517fa4;
-}*/
+
 
 .container {
-    margin: 80px auto;
-    width: 80%;
-    min-width: 820px;
+    overflow:hidden;
+    float: left;
+    /*margin: 80px auto;*/
+    width: 100%;
+/*    min-width: 820px;
     max-width: 980px;
-    padding: 10px 20px 20px 20px;
-    border: 2px solid black;
-}
+*/    /*padding: 10px 20px 20px 20px;*/
+/*    border: 2px solid black;
+*/}
 
-img{
-    width:27%;
-    margin: 20px;
-}
 
-img a {
-    display:inline;
-}
+.box {
+    width: 25%;
+/*    padding-bottom: 25%;
+*/}
+/*
+.album a{
+    width: 100%;
+    height: 100%;
+}*/
+
 
 a {
     text-decoration: none;
@@ -86,10 +84,13 @@ a:visited{
     text-decoration: none;
 }
 
-.album-cover{
-    display:inline;
+a:link, a:visited {
+    display:block;
+    text-decoration: none;
+    color: inherit;
 }
 
-.album-cover a{
-    display:inline;
-}
+/*
+a:hover, a:active{
+    background-color: #517fa4;
+}*/
