--- a/app/views/albums/index.erb
+++ b/app/views/albums/index.erb
@@ -2,5 +2,10 @@
 <%@albums.each do |album| %>
 	<!-- hacky and wrong. Refactor -->
 
-	<div class="album box"><div class = "innerContent"><a href="<%=album_url(album)%>"> <img src="data:image/png;base64, <%=encode(Photo.find_by(album_id: album.id)) if !Photo.find_by(album_id: album.id).nil?%>"></a> </div>
+	<div class="box">
+		<div class = "innerBox"><img class="cover" src="data:image/png;base64, <%=encode(Photo.find_by(album_id: album.id)) if !Photo.find_by(album_id: album.id).nil?%>"></div>
+		<div class ="titlebox"><%= album.name %></div>
+	</div>
 <%end%>
+
+
