--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,8 +22,6 @@
       <ul>
         <!-- refactor this into partials -->
         <%if current_user%>
-
-
           <li><a href="/logout">Sign out</a></li>
           <li><a href="/albums/new">Create Album</a></li>
           <li><a href="/albums">My Albums</a></li>
@@ -35,9 +33,9 @@
         <li id ="home-button">FLIKGURGRAM</li>
       </ul>
     </nav>
-    <!-- <div class ="container"> -->
+    <div class ="container">
       <div class="entry-error"><%= flash[:error] if flash[:error] %></div>
       <%= yield %>
-    <!-- </div> -->
+    </div>
   </body>
 </html>
