finished initial album layout scheme and added title transition at bottom

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
     <script src="/js/application.js"></script>
     <title></title>
   </head>
-  <body>
+  <body class="no-touch">
     <nav>
       <ul>
         <!-- refactor this into partials -->
