--- a/app/views/albums/index.erb
+++ b/app/views/albums/index.erb
@@ -1,11 +1,11 @@
 <!-- <h1> Albums </h1> -->
 <%@albums.each do |album| %>
-	<!-- hacky and wrong. Refactor -->
+	<!-- hacky and wrong. Refactor into partial/helpers -->
 
 	<div class="box">
-		<div class = "innerBox"><img class="cover" src="data:image/png;base64, <%=encode(Photo.find_by(album_id: album.id)) if !Photo.find_by(album_id: album.id).nil?%>"></div>
-		<div class ="titlebox"><%= album.name %></div>
+		<div class = "boxInner"><img class="cover" src="data:image/png;base64, <%=encode(Photo.find_by(album_id: album.id)) if !Photo.find_by(album_id: album.id).nil?%>">		<div class ="titleBox"><a href="<%=album_url(album)%>"><%= album.name %></a></div>
 	</div>
+</div>
 <%end%>
 
 
