--- a/app/views/albums/show.erb
+++ b/app/views/albums/show.erb
@@ -1,6 +1,5 @@
 <!-- show a single album with it's photos -->
 
-<!-- single album view -->
 <h1 class ="title"><%=@album.name%></h1>
 
 <!-- button for editing -->
@@ -15,7 +14,17 @@
   <input type="submit" value="Delete">
 </form>
 
-<% @photos.each do |photo| %>
-<a href="<%=photo_url(photo)%>" > <img alt="Embedded Image" src="data:image/png;base64,<%=encode(photo)%>"/></a>
 
+
+<% @photos.each do |photo| %>
+<div class="box">
+	<div class = "boxInner"> <img class ="cover" src="data:image/png;base64,<%=encode(photo)%>"/>
+
+	<div class ="titleBox"><a href="<%=photo_url(photo)%>"> <%= photo.name %></a></div>
+	</div>
+</div>
 <%end%>
+
+
+
+
