Make checkbox option in new and edit form for albums to determine whether the album is public

--- a/app/views/albums/edit.erb
+++ b/app/views/albums/edit.erb
@@ -5,6 +5,8 @@
   <label>Body</label><br>
   <textarea class ="body-area" name="album[description]" value="<%=@album.description%>"></textarea><br>
   <!-- refactor and fix hardcoded value -->
+  <label>Make this album public:</label>
+  <input type = "checkbox" name = "album[public]" value = "true"><br>
   <input type="hidden" name="album[user_id]" value = "<%=current_user.id%>" >
   <input type="submit"><%=flash[:notice]%>
 </form>
