--- a/public/css/application.css
+++ b/public/css/application.css
@@ -65,6 +65,7 @@ nav ul li:nth-child(4) {
 }
 
 .boxInner{
+    background-color: black;
     position: absolute;
     bottom: 10px;
     left: 10px;
