Changed albums route to incorporate usere ID. Added logic to account for which albums should appear for a user. Also changed this route for login, signup and myalbums in the layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,7 +24,7 @@
         <%if current_user%>
           <li><a href="/logout">Sign out</a></li>
           <li><a href="/albums/new">Create Album</a></li>
-          <li><a href="/albums">My Albums</a></li>
+          <li><a href="/users/<%=current_user.id%>/albums">My Albums</a></li>
              <%= erb :'_uploadpopup' %>
         <%else%>
           <li><a href="/signup">Sign Up</a></li>
