Only user will see edit and delete buttons on an individual photos page

--- a/app/views/photo/show.erb
+++ b/app/views/photo/show.erb
@@ -1,5 +1,6 @@
 <img alt="Embedded Image" src="data:image/png;base64,<%=@photo%>" width="600"/>
 
+<%if current_user && @photo_object.album.user_id == current_user.id%>
 <form action="/photos/<%=@photo_object.id%>" method="POST">
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete">
@@ -8,3 +9,5 @@
 <form action="/photos/<%=@photo_object.id%>/edit" method="GET">
   <input type="submit" name="GET" value="Edit">
 </form>
+
+<%end%>
