--- a/app/views/albums/show.erb
+++ b/app/views/albums/show.erb
@@ -4,7 +4,7 @@
 <h1 class ="title"><%=@album.name%></h1>
 
 <!-- button for editing -->
-<%if current_user && @album.user_id == current_user.id%>
+<%if !not_album_owner?(@album) %>
 <form action="<%=album_url(@album)%>/edit" method="GET">
 <input type="submit" name="GET" value="Edit">
 </form>
