Remove unnecessary album_ownership_guard method

--- a/app/views/albums/show.erb
+++ b/app/views/albums/show.erb
@@ -4,7 +4,7 @@
 <h1 class ="title"><%=@album.name%></h1>
 
 <!-- button for editing -->
-<%if !not_album_owner?(@album) %>
+<%if album_owner?(@album) %>
 <form action="<%=album_url(@album)%>/edit" method="GET">
 <input type="submit" name="GET" value="Edit">
 </form>
