--- a/app/views/albums/new.erb
+++ b/app/views/albums/new.erb
@@ -1,4 +1,4 @@
-<form method="POST" action="/albums">
+<form method="POST" action="/albums" class="new-album">
 	<label>Title</label><br>
 	<input type="text" name="album[name]"><br>
 	<label>Body</label><br>
