adding centered max width nav bar and centered single photo view

--- a/app/views/photo/show.erb
+++ b/app/views/photo/show.erb
@@ -1,6 +1,6 @@
-<div class= "wrapper">
+<div class= "container">
 <div class= "single-photo">
-<img alt="Embedded Image" src="data:image/png;base64,<%=@photo%>" width="600"/></div>
+<img alt="Embedded Image" src="data:image/png;base64,<%=@photo%>"></div>
 </div>
 
 <%if album_owner?(@photo_object.album) %>
