--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -33,7 +33,7 @@
         <li id ="home-button">FLIKGURGRAM</li>
       </ul>
     </nav>
-    <div class ="container">
+    <div class ="wrapper">
       <div class="entry-error"><%= flash[:error] if flash[:error] %></div>
       <%= yield %>
     </div>
