--- a/public/css/application.css
+++ b/public/css/application.css
@@ -16,6 +16,7 @@ nav{
     border-bottom: 1px solid #1c5380;
     border-bottom-color: rgba(4,40,71,.8);
     box-shadow: 0 1px 0 rgba(111,151,182,.5)inset,0 -1px 0 rgba(111,151,182,.2)inset,0 1px 1px rgba(0,0,0,.2);
+    text-align: center;
 }
 
 #home-button{
@@ -28,16 +29,16 @@ nav{
 }
 
 nav ul{
+    margin: 0 auto;
+    max-width: 1024px;
     padding: 15px 20px 13px 0;
-    width:100%;
     vertical-align: middle;
-    float: right;
     list-style-type: none;
-    margin: 0;
     overflow: hidden;
 
     color: inherit;
 }
+
 
 nav ul li {
     padding: 0 10px;
@@ -53,10 +54,18 @@ nav ul li:nth-child(4) {
 
 
 
-.container {
+.wrapper {
     overflow:hidden;
     margin:10px;
+    text-align: center;
 }
+
+.container{
+  margin-top: 5%;
+/*  text-align: center;
+*//*  max-width: 512px;
+  margin-left: 224px;
+*/}
 
 
 .box {
@@ -122,10 +131,7 @@ img.cover{
 }
 
 /*for single photo view*/
-.wrapper{
-  margin-top: 5%;
-  text-align: center;
-}
+
 
 .single-photo{
 }
