Add landing page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -30,7 +30,7 @@
           <li><a href="/signup">Sign Up</a></li>
           <li><a href="/login">Sign in</a></li>
         <%end%>
-        <li id ="home-button">FLIKGURGRAM</li>
+        <li id ="home-button"><a href = "/"> FLIKGURGRAM</a></li>
       </ul>
     </nav>
     <div class ="container">
