--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,9 @@
-This will be the landing page
+<%@photos.each do |photo| %>
+<div class="box">
+  <div class = "boxInner"> <img class ="cover" src="data:image/png;base64,<%=encode(photo)%>"/>
+
+  <div class ="titleBox"><a href="<%=photo_url(photo)%>"> <%= photo.name %></a></div>
+  </div>
+</div>
+<%end%>
+
