fixing typo in view

--- a/app/views/albums/show.erb
+++ b/app/views/albums/show.erb
@@ -5,7 +5,7 @@
 <!-- button for editing -->
 <%if album_owner?(@album) %>
 <form action="<%=album_url(@album)%>/edit" method="GET">
-<input type="ssubmit" name="GET" value="Edit">
+<input type="submit" name="GET" value="Edit">
 </form>
 
 
