--- a/app/views/albums/new.erb
+++ b/app/views/albums/new.erb
@@ -4,8 +4,10 @@
 	<label>Body</label><br>
 	<textarea rows = "10" cols= "30" class ="body-area" name="album[description]"></textarea><br>
   <label>Make this album:</label><br>
-  Public<input type = "radio" name = "album[public]" value = "true" >
-  Private<input type = "radio" name = "album[public]" value = "false" checked >
+  <div class = "public_private"><ul>
+  <li>Public<input type = "radio" name = "album[public]" value = "true" ></li>
+  <li>Private<input type = "radio" name = "album[public]" value = "false" checked ></li>
+</ul></div>
 	<input type="hidden" name="album[user_id]" value = "<%=current_user.id%>" >
 	<input type="submit"><%=flash[:notice]%>
 </form>
