--- a/app/views/albums/index.erb
+++ b/app/views/albums/index.erb
@@ -1,6 +1,6 @@
 <%@albums.each do |album| %>
 	<div class="box">
-		<div class = "boxInner"><img class="cover" src="data:image/png;base64, <%=encode(Photo.find_by(album_id: album.id)) if !Photo.find_by(album_id: album.id).nil?%>">		
+		<div class = "boxInner"><img class="cover" src="data:image/png;base64, <%=encode(album.photos.first) if !album.photos.empty?%>">		
 			<div class ="titleBox">
 				<a href="<%=album_url(album)%>"><%=album.name%></a>
 			</div>
