--- a/app/views/photos/upload.erb
+++ b/app/views/photos/upload.erb
@@ -1,17 +1,17 @@
 <html>
   <body>
-  <form action="/photos/upload" method = "POST" enctype='multipart/form-data'>
-  <h2>Upload a Photo</h2>
-    <input type="text" name="photo_name" placeholder="Name your photo!"/><br><br>
-    <input type="text" name="location" placeholder="Where was it taken?"/><br><br>
-    <input type="text" name="Description" rows="5" placeholder="Care to add a description?"/><br><br>
-    <select name="album_name">
-        <% @albums.each do |album| %>
-            <option><%=album.name%> </option>
-        <% end %>
-    </select><br><br>
-    <%= haml :'/photo/photo_upload' %><br><br>
-  </form>
+    <form action="/photos/upload" method = "POST" enctype='multipart/form-data'>
+      <h2>Upload a Photo</h2>
+      <input type="text" name="photo_name" placeholder="Name your photo!"/><br><br>
+      <input type="text" name="location" placeholder="Where was it taken?"/><br><br>
+      <input type="text" name="Description" rows="5" placeholder="Care to add a description?"/><br><br>
+      <select name="album_name">
+          <% @albums.each do |album| %>
+              <option><%=album.name%> </option>
+          <% end %>
+      </select><br><br>
+      <%= haml :'/photos/photo_upload' %><br><br>
+    </form>
   </body>
 </html>
 
